log
Fri 17 Mar 2023 03:19:55 AM UTC: 
 tests:  0|7
total_score: 0/70
6ccbfc8
Fri 17 Mar 2023 03:21:33 AM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|6
total_score: 10/70
68e240b
Fri 17 Mar 2023 03:28:47 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:53:22: error: expected expression before ‘]’ token
   53 |   p->nombre = nombre[];
      |                      ^
Compilation failed
fd6129b
Fri 17 Mar 2023 02:28:05 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:64:14: error: assignment to expression with array type
   64 |    p->nombre = nombre;
      |              ^
Compilation failed
afa9561
Fri 17 Mar 2023 02:28:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:32:15: error: ‘i’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   32 |       if (*(a + i) > *max)
      |               ^
cc1: all warnings being treated as errors
Compilation failed
127f657
Fri 17 Mar 2023 02:32:32 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:35:15: error: ‘i’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   35 |       if (*(a + i) > *max)
      |               ^
cc1: all warnings being treated as errors
Compilation failed
5f94234
Fri 17 Mar 2023 02:33:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
71fae2a
Fri 17 Mar 2023 02:34:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3dead43
Fri 17 Mar 2023 02:35:15 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
ccb66f5
Fri 17 Mar 2023 02:35:37 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c23210c
Fri 17 Mar 2023 02:35:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:35:12: error: ‘i’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   35 |       if (a[i] > *max)
      |            ^
cc1: all warnings being treated as errors
Compilation failed
7bd8d91
Fri 17 Mar 2023 02:36:39 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
f07c95d
Fri 17 Mar 2023 02:38:26 PM UTC: 
 exercises.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  0|0
d2a2e8a
